# neural-flow-architect

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LISTING.md  NOTICE  README.md  SECURITY.md  TODO.md  neurabeach-manifest.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml
.github/workflows.pending/: README.md  ci.yml
configs/: default.yaml
data/audit/: audit.jsonl
data/profiles/: app_categories.json  local.json  onboarding.json
docs/: CONTRIBUTING_ISSUES.md  NOVELTY.md  README.md  STATUS.md
docs/agent/: ARCHITECT_AGENT.md
docs/architecture/: FAILSAFE.md  LATENCY_BUDGET.md  SYSTEM_ARCHITECTURE.md
docs/assets/demo/: README.md
docs/bci/: ADAPTER_LAYER.md  BRAINFLOW.md  NEURALINK_READINESS.md
docs/privacy/: PRIVACY_ETHICS.md  THREAT_MODEL.md
docs/research/: OPEN_QUESTIONS.md
docs/roadmap/: DAY1_PROTOTYPE.md  ROADMAP.md
docs/ux/: A11Y_AUDIT.md  CAREGIVER_SETUP.md  DAILY_DRIVER.md  USER_GUIDE.md  UX_PRINCIPLES.md
examples/: README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  vite-env.d.ts
frontend/src/components/: A11yPanel.tsx  AppMapPanel.tsx  BlockReviewModal.tsx  CaregiverChecklist.tsx  CoachingPanel.tsx  DwellButton.tsx  ExplainDrawer.tsx  FlowRing.tsx  HybridMlPanel.tsx  InsightsPanel.tsx  KeyboardMap.tsx  LiveAnnouncer.tsx  Onboarding.tsx  OverrideBar.tsx  PresetPicker.tsx  RecipePicker.tsx  ScanMode.tsx  ScoreboardPanel.tsx  SessionRecapPanel.tsx  SignaturePanel.tsx  Sparkline.tsx  TimelinePanel.tsx  TrustPanel.tsx  VoiceCommandBar.tsx  WeeklyRecapPanel.tsx
frontend/src/hooks/: useKeyboardIntents.ts  useNfaSession.ts
frontend/src/styles/: global.css
prototypes/day1/: run_closed_loop.py
scripts/: ci.sh  dev_check.sh
src/neural_flow_architect/: __init__.py  __main__.py  cli.py
src/neural_flow_architect/adapters/: __init__.py  base.py  brainflow_adapter.py  contract.py  neuralink_stub.py  registry.py  replay.py  simulator.py
src/neural_flow_architect/agent/: __init__.py  architect.py  explainer.py  governor.py  llm_explainer.py  predictive.py  undo.py
src/neural_flow_architect/api/: __init__.py  server.py
src/neural_flow_architect/core/: __init__.py  active_app.py  app_map.py  caregiver.py  context.py  doctor.py  events.py  failsafe.py  intents.py  logging.py  multimodal.py  onboarding.py  quiet_hours.py  runtime.py  session.py  settings.py  types.py
src/neural_flow_architect/environment/: __init__.py  digital.py  os_focus.py  os_notifications.py  physical.py  recipes.py
src/neural_flow_architect/eval/: __init__.py  harness.py  latency.py  soak.py
src/neural_flow_architect/flow/: __init__.py  engine.py  ml_calibrator.py
src/neural_flow_architect/insights/: __init__.py  coaching.py  scoreboard.py  session_recap.py  store.py  trust.py
src/neural_flow_architect/privacy/: __init__.py  (+2 more)
tests/fixtures/: demo_trajectory.json  synthetic_eeg.csv
tests/integration/: test_api.py  test_brainflow_pipeline.py  test_scoreboard_app_map_api.py  test_simulator_loop.py
tests/unit/: test_a11y_audit.py  test_active_app_trust.py  test_adapter_contract.py  test_agent_policies.py  test_app_map_scoreboard.py  test_backup_a11y.py  test_block_review_learning.py  test_brainflow_file.py  test_coaching.py  test_consent.py  test_doctor.py  test_eval_harness.py  test_failsafe.py  test_features.py  test_feedback.py  test_flow_engine.py  test_hybrid_ml_and_recap.py  test_insights.py  test_intents.py  test_iot_dry_run.py  test_latency_bench.py  test_llm_explainer.py  test_multi_agent_policies.py  test_multimodal.py  test_os_notifications.py  test_personalization.py  test_predictive.py  test_presets_onboarding.py  test_quality.py  test_quiet_audit.py  test_recipes.py  test_replay_adapter.py  test_signature_block_review.py  test_soak.py  test_undo.py  test_weekly_recap.py
(+23 files in other folders)
