[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "neural-flow-architect"
version = "0.2.0"
description = "Closed-loop, proactive AI co-pilot for high-bandwidth BCI users to detect, protect, and deepen flow states."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "Neural Flow Architect Contributors" },
]
keywords = [
  "bci",
  "brain-computer-interface",
  "flow",
  "neuralink",
  "neurotechnology",
  "agentic-ai",
  "assistive-tech",
  "privacy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "websockets>=12.0",
  "orjson>=3.10",
  "structlog>=24.1",
  "scikit-learn>=1.4",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
brainflow = [
  "brainflow>=5.12",
]
iot = [
  "homeassistant-api>=4.1",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "types-PyYAML",
]
ml = [
  "torch>=2.2; platform_system != 'Darwin' or platform_machine != 'x86_64'",
  "onnxruntime>=1.17",
]
all = [
  "neural-flow-architect[brainflow,iot,dev,ml]",
]

[project.urls]
Homepage = "https://github.com/neural-flow-architect/neural-flow-architect"
Documentation = "https://github.com/neural-flow-architect/neural-flow-architect/tree/main/docs"
Repository = "https://github.com/neural-flow-architect/neural-flow-architect"
Issues = "https://github.com/neural-flow-architect/neural-flow-architect/issues"

[project.scripts]
nfa = "neural_flow_architect.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_flow_architect"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/configs",
  "/README.md",
  "/LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts", "prototypes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = [
  "E501",   # line length handled by formatter
  "UP042",  # (str, Enum) still fine; StrEnum migration is optional
  "SIM102", # nested if often clearer for policy branches
  "SIM105", # try/except pass is explicit for best-effort OS hooks
  "SIM108", # ternary not always clearer for I/O branches
  "N806",   # BrainFlow class names (BoardShim, etc.)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]
"prototypes/**" = ["E402", "F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["neural_flow_architect"]
# Blocking in CI (`.github/workflows/ci.yml`). Run locally: `mypy src`

[[tool.mypy.overrides]]
module = [
  "brainflow",
  "brainflow.*",
  "homeassistant_api",
  "homeassistant_api.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
filterwarnings = [
  "ignore::DeprecationWarning",
]
markers = [
  "integration: integration tests requiring optional hardware/backends",
  "slow: longer-running tests",
]

[tool.coverage.run]
source = ["neural_flow_architect"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
